# yandex_backend_enroll

./: .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
app/: __main__.py  schemas.py
app/routes/: delete.py  imports.py  nodes.py  sales.py  statistic.py
db/: init.py  models.py  views.py  viewshopunit.py
tests/: conftest.py
tests/app/routes/: test_delete.py  test_imports.py  test_nodes.py  test_sales.py  test_statistic.py
tests/db/: test_db.py
