[tool.poetry]
name = "main_app"
version = "0.1.0"
description = ""
authors = ["sergey-png <svsobolev@miem.hse.ru>"]

[tool.poetry.dependencies]
python = "3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
pydantic = {extras = ["dotenv"], version = "^1.9.1"}
SQLAlchemy = "^1.4.37"
httpx = "^0.23.0"
psycopg2 = "^2.9.3"
pytest-asyncio = "^0.18.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
autoflake = "^1.4"
isort = "^5.10.1"
unify = "^0.5"
flake8 = "^4.0.1"
pylint = "^2.12.2"
mypy = "^0.941"
safety = "^1.10.3"
pytest = "^7.1.0"
pytest-cov = "^3.0.0"
pytest-deadfixtures = "^2.2.1"
pytest-mock = "^3.7.0"
pytest-asyncio = "^0.18.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
